agregando scale a movielist

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -6,7 +6,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 50px;
+  padding-right: 50px;
   ul {
     list-style-type: none;
     margin: 0;
