--- a/src/components/MovieCard/MovieCard.scss
+++ b/src/components/MovieCard/MovieCard.scss
@@ -1,6 +1,30 @@
+@import "../../utils/variables";
 .movie-card {
+  &:hover {
+    box-shadow: 3px 3px 9px 10px #00000040;
+  }
   img {
     border-radius: 3px;
     width: 150px;
+  }
+  div {
+    display: none;
+    width: 100%;
+    height: 20%;
+    background-color: $background-grey;
+
+    h2 {
+      font-size: 10px;
+      text-align: center;
+    }
+  }
+}
+
+.movie-card:hover {
+  img {
+    height: 80%;
+  }
+  div {
+    display: block;
   }
 }
