--- a/src/components/MovieCard/MovieCard.scss
+++ b/src/components/MovieCard/MovieCard.scss
@@ -16,6 +16,13 @@
     h2 {
       font-size: 10px;
       text-align: center;
+      color: white;
+    }
+    p {
+      color: white;
+      opacity: 0.7;
+      font-size: 10px;
+      text-align: center;
     }
   }
 }
