--- a/src/components/MovieInfo/MovieInfo.scss
+++ b/src/components/MovieInfo/MovieInfo.scss
@@ -1,15 +1,17 @@
 @import "../../utils/variables";
 
 .movieInfo {
+  position: relative;
   height: 450px;
   background-position: center;
   background-size: cover;
-  z-index: 20000;
 }
 .movie {
   display: flex;
 
   &-poster {
+    z-index: 20000;
+
     margin: 30px;
     img {
       width: 270px;
@@ -17,6 +19,8 @@
   }
 
   &-info {
+    z-index: 20000;
+
     margin: 30px;
     width: 40%;
     color: white;
@@ -31,15 +35,22 @@
         opacity: 0.7;
       }
     }
+
+    &__genres {
+      margin-top: 15px;
+      padding: 0;
+      list-style-type: none;
+    }
   }
 }
 
 .background {
   position: absolute;
-  top: 70px;
-  left: 48px;
+  z-index: 3;
+  top: 0px;
+  left: 0px;
   background-color: black;
   opacity: 0.7;
   height: 450px;
-  width: 100vw;
+  width: 100%;
 }
