--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,5 +1,5 @@
 @import "../../utils/variables";
-
+@import "../../utils/keyframes.scss";
 .header {
   background-color: $background-grey;
   height: 70px;
@@ -63,4 +63,32 @@
 .fabIcon {
   color: white;
   cursor: pointer;
+}
+
+.search {
+  &__input {
+    outline: none;
+    &:focus {
+      border: none;
+    }
+    // width: 500px;
+    margin-right: 10px;
+    // height: 30px;
+    background-color: $dark-grey;
+    border: none;
+    border-radius: 7px;
+    padding: 15px;
+    font-size: 16px;
+    color: white;
+    transition: $transition-a;
+  }
+}
+
+.opened {
+  animation: searchBar-in 300ms ease-in-out forwards;
+}
+.closed {
+  // display: none;
+  // background-color: $background-grey;
+  animation: searchBar-out 300ms ease-in-out forwards;
 }
