--- a/src/components/MovieCard/MovieCard.scss
+++ b/src/components/MovieCard/MovieCard.scss
@@ -3,40 +3,54 @@ a {
   text-decoration: none;
 }
 .movie-card {
-  max-width: 200px;
-  &:hover {
-    box-shadow: 3px 3px 9px 10px #00000040;
-  }
+  // --slider-index: 1;
+  // transform: translateX(calc(var(--slider-index) * -100%));
+  // &:hover {
+  //   box-shadow: 3px 3px 9px 10px #00000040;
+  // }
+
+  margin: 0;
+  height: 100%;
+  width: 13vw;
+  min-width: 180px;
+  display: flex;
+  transition: $transition-a;
+
   img {
-    border-radius: 3px;
-    width: 150px;
-    height: 230px;
-  }
-  div {
-    display: none;
+    border-radius: 7px;
     width: 100%;
-    height: 20%;
-    background-color: $background-grey;
+    max-width: 100%;
+    max-height: 100%;
+    padding: 0.25rem;
 
-    h2 {
-      font-size: 10px;
-      text-align: center;
-      color: white;
-    }
-    p {
-      color: white;
-      opacity: 0.7;
-      font-size: 10px;
-      text-align: center;
-    }
+    //Este es el aspect ratio de netflix, pero mis imagenes no se adaptan
+    // aspect-ratio: 16/9;
   }
+  // div {
+  //   display: none;
+  //   width: 100%;
+  //   height: 20%;
+  //   background-color: $background-grey;
+
+  //   h2 {
+  //     font-size: 10px;
+  //     text-align: center;
+  //     color: white;
+  //   }
+  //   p {
+  //     color: white;
+  //     opacity: 0.7;
+  //     font-size: 10px;
+  //     text-align: center;
+  //   }
+  // }
 }
 
-.movie-card:hover {
-  img {
-    height: 80%;
-  }
-  div {
-    display: block;
-  }
-}
+// .movie-card:hover {
+//   // img {
+//   //   height: 80%;
+//   // }
+//   // div {
+//   //   display: block;
+//   // }
+// }
